# bfc

./: .gitignore  CMakeLists.txt
include/: instructions.h  interpreter.h  main.h  parse.h  state.h  token.h
src/: interpreter.c  main.c  parse.c  state.c  token.c
